# svg2appicon

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: icon.rs  lib.rs  main.rs
