[package]
name = "svg2appicon"
version = "0.1.0"
authors = ["Katsu Matsuda <kats.mtd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
resvg = "0.15.0"
usvg = "0.15.0"
tiny-skia = "0.5.1"
once_cell = "1.8.0"
clap = "2.33.3"
