[package]
name = "svg2appicon"
version = "0.1.2"
authors = ["Katsu Matsuda <kats.mtd@gmail.com>"]
edition = "2018"
description = "Convert svg to icons for iOS, macOS, and watchOS"
license = "MIT"

[dependencies]
resvg = "0.15.0"
usvg = "0.15.0"
tiny-skia = "0.5.1"
once_cell = "1.8.0"
clap = "2.33.3"
anyhow = "1.0.43"
